# pair

./: .gitignore  Cargo.toml  README.md
src/: adapt.rs  compat.rs  lib.rs  pass-old.rs  pass.rs  tests.rs  utils.rs
src/compat/: ast.rs  call.rs  rewrite.rs  rust.rs  serde.rs  stmt.rs  tree.rs  typed.rs  waffle.rs
src/compat/waffle/: base.rs
src/tests/: mod1.wasm  waffle.rs
src/utils/: waffle.rs
src/utils/waffle/: vendor.rs
